fixed transfaar services